[package]
name = "fink"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
dotenv = "0.15.0"
serenity = "0.12.2"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres"] }
thiserror = "2.0.0"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
